--- a/index.css
+++ b/index.css
@@ -22,12 +22,15 @@ h2 {
 }
 
 fieldset {
-    border: solid white 1px;
+    border: solid #4472CA 1px;
     border-radius: 10px;
 }
 
 legend {
     color: #5E7CE2;
+    box-shadow: 0 0 5px #0a369d;
+    border-radius: 5px;
+    padding: 3px;
 }
 
 label {
